--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <retrofit.version>2.9.0</retrofit.version>
         <gson.version>2.8.5</gson.version>
         <mybatis.version>1.3.7</mybatis.version>
+        <allure-maven.version>2.10.0</allure-maven.version>
+        <allure-junit5.version>2.6.0</allure-junit5.version>
     </properties>
 
     <build>
@@ -27,9 +29,22 @@
                     <version>${surefire.version}</version>
             </plugin>
             <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>${allure-maven.version}</version>
+            </plugin>
+            <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>${mybatis.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <phase>process-resources</phase>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
         <resources>
@@ -53,6 +68,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit5</artifactId>
+            <version>${allure-junit5.version}</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
