--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <mybatis.version>1.3.7</mybatis.version>
         <allure-maven.version>2.10.0</allure-maven.version>
         <allure-junit5.version>2.6.0</allure-junit5.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
